[project]
name = "data-visualization"
version = "0.1.0"
description = ""
authors = [
    {name = "David",email = "david.dumke@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.0,<4.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
